--- a/MedRecords/MedRecords/My Project/Resources.resx
+++ b/MedRecords/MedRecords/My Project/Resources.resx
@@ -130,6 +130,9 @@
   <data name="medHistory" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medHistory.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="medRecIcon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\medRecIcon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="pdf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pdf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
